finish logic of basic etch a sketch

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="preGrid">Etch-a-sketch</h1>
-    <button class="preGrid" onclick="gridSetup()">Start</button>
+    <div class="startContainer">
+        <h1 class="preGrid">Etch-a-sketch</h1>
+        <button class="preGrid" onclick="gridSetup()">Start</button>
+    </div>
     <div id="container">
     </div>
 </body>
